cabal-version:      2.2
name:               kanji
version:            3.4.1
synopsis:
  Perform 漢字検定 (Japan Kanji Aptitude Test) level analysis on Japanese Kanji

description:
  Perform 漢字検定 (Japan Kanji Aptitude Test) level analysis on Japanese Kanji.

category:           Data
homepage:           https://github.com/fosskers/kanji
author:             Colin Woodbury
maintainer:         colin@fosskers.ca
copyright:          2011 - 2020 Colin Woodbury
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.md
  CHANGELOG.md

common commons
  default-language: Haskell2010
  build-depends:
    , aeson       >=1.2
    , base        >=4.7   && <5
    , containers  >=0.5.8
    , text

  ghc-options:
    -Wall -fwarn-incomplete-record-updates
    -fwarn-incomplete-uni-patterns

library
  import:          commons
  hs-source-dirs:  lib
  build-depends:
    , deepseq
    , hashable

  exposed-modules:
    Data.Kanji
    Data.Kanji.Levels
    Data.Kanji.Types

executable kanji
  import:         commons
  main-is:        nanq.hs
  hs-source-dirs: nanq
  ghc-options:    -O2
  build-depends:
    , aeson-pretty
    , kanji
    , microlens             >=0.4
    , microlens-aeson       >=2.2
    , optparse-applicative  >=0.14
    , transformers

test-suite kanji-test
  import:         commons
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  hs-source-dirs: test
  ghc-options:    -threaded -with-rtsopts=-N
  build-depends:
    , HUnit-approx  >=1.1
    , kanji
    , tasty         >=0.11
    , tasty-hunit   >=0.9

benchmark kanji-bench
  import:         commons
  type:           exitcode-stdio-1.0
  main-is:        Bench.hs
  hs-source-dirs: bench
  ghc-options:    -threaded -O2
  build-depends:
    , criterion  >=1.1
    , kanji
