name:                nanq

category:            Natural Language Processing

version:             1.1.0

synopsis:            Performs 漢字検定 (National Kanji Exam) level analysis on given Kanji.

description:         `nanq` can inform the user of a number of statistics
		     regarding Kanji and the Nation Kanji Examination, also
		     known as 漢字検定 or 漢検. In the most simple case,
		     it will reveal what inputed Kanji belong to what
		     Level of the exam.

homepage:            https://github.com/fosskers/nanq

license:             GPL-3

license-file:        LICENSE

author:              Colin Woodbury

maintainer:          colingw@gmail.com

build-type:          Simple

cabal-version:       >=1.8

executable nanq
    main-is:  	     nanq.hs
  
    other-modules:	Data.Kanji,
                        Data.Kanji.TenthQ,
                        Data.Kanji.NinthQ,
                        Data.Kanji.EighthQ,
                        Data.Kanji.SeventhQ,
                        Data.Kanji.SixthQ,
                        Data.Kanji.FifthQ,
                        Data.Kanji.FourthQ,
                        Data.Kanji.ThirdQ,
                        Data.Kanji.PreSecondQ,
                        Data.Kanji.SecondQ
  
    build-depends:       base < 5
                       , bytestring >= 0.10.6.0
                       , containers >= 0.4.0.0
                       , microlens >= 0.3.5.0
                       , microlens-platform >= 0.1.7.0
                       , text
  
library
    build-depends: base < 5
                 , bytestring >= 0.10.6.0
                 , containers >= 0.4.0.0
                 , microlens >= 0.3.5.0
                 , microlens-platform >= 0.1.7.0
                 , text

    exposed-modules: Data.Kanji,
                     Data.Kanji.TenthQ,
                     Data.Kanji.NinthQ,
                     Data.Kanji.EighthQ,
                     Data.Kanji.SeventhQ,
                     Data.Kanji.SixthQ,
                     Data.Kanji.FifthQ,
                     Data.Kanji.FourthQ,
                     Data.Kanji.ThirdQ,
                     Data.Kanji.PreSecondQ,
                     Data.Kanji.SecondQ
