name:                nanq

category:            Natural Language Processing

version:             1.1.1

synopsis:            Performs 漢字検定 (National Kanji Exam) level analysis on given Kanji.

description:         `nanq` can inform the user of a number of statistics
		     regarding Kanji and the Nation Kanji Examination, also
		     known as 漢字検定 or 漢検. In the most simple case,
		     it will reveal what inputed Kanji belong to what
		     Level of the exam.

homepage:            https://github.com/fosskers/nanq

license:             GPL-3

license-file:        LICENSE

author:              Colin Woodbury

maintainer:          colingw@gmail.com

build-type:          Simple

cabal-version:       >=1.8

executable nanq
    main-is:  	     nanq.hs
  
    other-modules:	Data.Kanji,
                        Data.Kanji.TenthQ,
                        Data.Kanji.NinthQ,
                        Data.Kanji.EighthQ,
                        Data.Kanji.SeventhQ,
                        Data.Kanji.SixthQ,
                        Data.Kanji.FifthQ,
                        Data.Kanji.FourthQ,
                        Data.Kanji.ThirdQ,
                        Data.Kanji.PreSecondQ,
                        Data.Kanji.SecondQ
  
    build-depends:       aeson >= 0.10.0.0
                       , aeson-pretty >= 0.7.2
                       , base < 5
                       , bytestring >= 0.10.6.0
                       , containers >= 0.4.0.0
                       , extensible-effects >= 1.11.0.0
                       , microlens >= 0.3.5.0
                       , microlens-aeson >= 2.1.0
                       , optparse-applicative >= 0.12.0.0
                       , text >= 1.2.2.0
  
library
    build-depends: base < 5
                 , bytestring >= 0.10.6.0
                 , containers >= 0.4.0.0
                 , microlens >= 0.3.5.0
                 , text >= 1.2.2.0

    exposed-modules: Data.Kanji,
                     Data.Kanji.TenthQ,
                     Data.Kanji.NinthQ,
                     Data.Kanji.EighthQ,
                     Data.Kanji.SeventhQ,
                     Data.Kanji.SixthQ,
                     Data.Kanji.FifthQ,
                     Data.Kanji.FourthQ,
                     Data.Kanji.ThirdQ,
                     Data.Kanji.PreSecondQ,
                     Data.Kanji.SecondQ
