name:                nanq

category:            Natural Language Processing

version:             2.0.0

synopsis:            Performs 漢字検定 (National Kanji Exam) level analysis on given Kanji.

description:         `nanq` can inform the user of a number of statistics
		     regarding Kanji and the Nation Kanji Examination, also
		     known as 漢字検定 or 漢検. In the most simple case,
		     it will reveal what inputed Kanji belong to what
		     Level of the exam.

homepage:            https://github.com/fosskers/nanq

license:             GPL-3

license-file:        LICENSE

author:              Colin Woodbury

maintainer:          colingw@gmail.com

build-type:          Simple

cabal-version:       >=1.8

extra-source-files: README.md
                    CHANGELOG.md

executable nanq
    main-is:  	     nanq.hs
  
    other-modules:	Data.Kanji,
                        Data.Kanji.Level.TenthQ,
                        Data.Kanji.Level.NinthQ,
                        Data.Kanji.Level.EighthQ,
                        Data.Kanji.Level.SeventhQ,
                        Data.Kanji.Level.SixthQ,
                        Data.Kanji.Level.FifthQ,
                        Data.Kanji.Level.FourthQ,
                        Data.Kanji.Level.ThirdQ,
                        Data.Kanji.Level.PreSecondQ,
                        Data.Kanji.Level.SecondQ
  
    build-depends:       aeson >= 0.9.0.1
                       , aeson-pretty >= 0.7.2
                       , base < 5
                       , bytestring >= 0.10.6.0
                       , containers >= 0.4.0.0
                       , extensible-effects >= 1.11.0.0
                       , microlens >= 0.3.5.0
                       , microlens-aeson >= 2.1.0
                       , optparse-applicative >= 0.12.0.0
                       , text >= 1.2.2.0

library
    build-depends: base < 5
                 , bytestring >= 0.10.6.0
                 , containers >= 0.4.0.0
                 , microlens >= 0.3.5.0
                 , text >= 1.2.2.0

    exposed-modules: Data.Kanji,
                     Data.Kanji.Types,
                     Data.Kanji.Level.TenthQ,
                     Data.Kanji.Level.NinthQ,
                     Data.Kanji.Level.EighthQ,
                     Data.Kanji.Level.SeventhQ,
                     Data.Kanji.Level.SixthQ,
                     Data.Kanji.Level.FifthQ,
                     Data.Kanji.Level.FourthQ,
                     Data.Kanji.Level.ThirdQ,
                     Data.Kanji.Level.PreSecondQ,
                     Data.Kanji.Level.SecondQ
