name:                kanji
version:             3.0.2
synopsis:            Perform 漢字検定 (Japan Kanji Aptitude Test) level analysis on Japanese Kanji.
description:         Perform 漢字検定 (Japan Kanji Aptitude Test) level analysis on Japanese Kanji.
license:             GPL-3
license-file:        LICENSE
author:              Colin Woodbury
maintainer:          colingw@gmail.com

homepage:            https://github.com/fosskers/nanq
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Data.Kanji
                     , Data.Kanji.Types
                     , Data.Kanji.Levels

  other-modules:       Data.Kanji.Types.Internal

  other-extensions:    FlexibleInstances

  build-depends:       base >= 4.8 && < 4.11
                     , containers >= 0.5 && < 0.6
                     , bytestring >= 0.10 && < 0.11
                     , microlens >= 0.4.1 && < 0.5
                     , text >= 1.2 && < 1.3

  -- hs-source-dirs:
  default-language:    Haskell2010

  ghc-options: -O2
